# sample-repo

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/sample_repo/: main.py
tests/: test_add.py
