[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-repo"
version = "0.1.0"
description = "Sample repository"
authors = [
    { name = "Taizo Munemura" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sample_repo*"]
